--- a/src/phonology/inventory/styles.css
+++ b/src/phonology/inventory/styles.css
@@ -4,11 +4,11 @@ th {
     text-align: left;
 }
 
-.highlight {
+.highlight, .chosen {
     background-color: #ffffbb;
 }
 
-th.highlight {
+th.highlight, .chosen {
     font-weight: bold;
 }
 
@@ -23,4 +23,13 @@ th.highlight {
 
 td {
     text-align: center;
+}
+
+.hidden {
+    display: none;
+}
+
+.heading {
+    font-weight: bold;
+    color: #555555;
 }
